# OS_CP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client.c  common.c  common.h  server.c
doc/: ANALYSIS.md  BUILD.md  DEFENSE_CHECKLIST.md  EXAMPLES.md  FILES.md  OS_CP_report.docx  PROJECT_STRUCTURE.md  QUICKSTART.md  build.sh
